# ChangeLog for app-portage/eix
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Oct 2014; Martin Väth <martin@mvath.de>:
  Update gettext deps

  22 Aug 2014; Martin Väth <martin@mvath.de>:
  Remove --with-ebuild-sh-default

  05 Apr 2014; Martin Väth <martin@mvath.de>:
  Fix path to ebuild.sh (#506596)

  01 Feb 2014; Martin Väth <martin@mvath.de>:
  Move eix to Github; add /usr/lib/tmpfiles.d/eix.conf support

  01 Nov 2013; Martin Väth <martin@mvath.de>:
  Remove IUSE=clang

  14 Sep 2013; Martin Väth <martin@mvath.de>:
  Bump to git-r3.eclass

  10 Sep 2013; Martin Väth <martin@mvath.de>:
  Install zsh-completion unconditionally according to gentoo policy

  14 Jun 2013; Martin Väth <martin@mvath.de>:
  remove app-shells/push from DEPEND

  19 Mar 2013; Martin Väth <martin@mvath.de>:
  Require >=gettext-0.18.2. Add USE=swap-remote.

  26 Jan 2013; Martin Väth <martin@mvath.de>:
  Add IUSE=strong-security

  14 Jan 2013; Martin Väth <martin@mvath.de>:
  Simplify handling of REPLACING_VERSIONS

  28 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  15 Jul 2012; Martin Väth <martin@mvath.de>:
  Update USE to match >=eix-0.26.0

  12 May 2012; Martin Väth <martin@mvath.de>:
  base->eutils

  16 Apr 2012; Martin Väth <martin@mvath.de>:
  Bump from the tree to make live ebuild; remove previous ChangeLog