@@ -1,2 +1,1 @@
-DIST sundtek_installer_140727.221230.sh 23242106 SHA256 094b947eb43be671fddfc69409b09facf5fecb338b6e587d9ee595bfda0d5fe0 SHA512 56ac2f5066aabf59414ad0837f6a3d3a7915e097b0b8cb5caf2376d39398050d5ec93a356460e7ece0299ad89671fd0c0bb126396949416a0f4ba583c4a197ef WHIRLPOOL df632a0eead5d289cdb63a1815d89ec10b42f5a1a5248fe86f78eab3cb3825e39eaaadabbb338a026b9136525f287c4283f87c2b53e6a02c83541b50a10a78c9
-DIST sundtek_installer_140927.215955.sh 23401666 SHA256 47da59f5f78c671488169155eed6f58473c3270be22e203baa6f701b054974ce SHA512 5b29a21feadac5a74c1e045d66ccb09f7376af39ec85c55b4009da87050a165f2b68e42eefc116a3eba43859525644d36a4d76c9ef1ccc62b614f8fdad7e31ed WHIRLPOOL 2fa6d424c6954ecc7cf3582a978e60f2b391d22cd96272767514c3734432b62331159d95646a5e1e775fe39f51c9f786ce7b70c8529830200080ff02c4500b7e
+DIST sundtek_installer_141016.181612.sh 23449496 SHA256 d19e3348035fed4a88abf408a8d014f5621ac6eacbbc6dab26f81259f8ddcebf SHA512 216fc10725d57dee5a8a7e901de449f67bc65feb1b8185d4d23a5495c6f134f9367416e070d72c7950031674d22487d0eb87fe92b975eb9e3237fccc3655588b WHIRLPOOL 5db9d4207dbf29e53d8e0e74ed1efda6003d8d6f597f939bf02398821b28a6c8c01e109c8fc84218736626b930a1dda4e8bb56b48112b5276090c8dd92d98241
