@@ -1,1 +1,1 @@
-DIST noscript-2.6.9.xpi 542611 SHA256 7012268e33bbc13d27c9fe8836d53d50b0ce30cad15ab4de5f9b3c3d96b478b8 SHA512 35902d388a8aa57d9c70a78b3832cc6b9b53e49b92c1d021198bb09cd7f69eadfb3b89d74f6b39d88305508a7235a5378c5e489078942508d7d2b4b13565c81c WHIRLPOOL 935695398a1888a0aeebeb24eeab30400f351d9e2c6d53afc5c44cdd102a99f07ca881062653aedafd64e4739eae57a7c250b4b97b731ba76e647517c393ba0e
+DIST noscript-2.6.9.2.xpi 542741 SHA256 77913f7aca0724b4ebf8b0e9f70bfb7dae412c928cd416a2a221ac76eec717b2 SHA512 a7aaa9637448729a247b8d507c261fb905dd751dccc4cc261382fdcd6375fc7326059ab00c21d67a3c8089f33d8ccfe0f6ba455676223085d8fe098bcaf8b468 WHIRLPOOL 240413c434ae9ab2119aa6d5e1b316ffb74fef5c5f243831c379d9a646a14d97677edb22d8ddf571c3570e10483400da79e0abb4fb1bf4bce12ccdbbd769f040
