@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sundtek-tv-141016.181612 (19 Oct 2014)
+
+  19 Oct 2014; Martin Väth <martin@mvath.de>:
+  Version bump.
+
 *sundtek-tv-140918.104249 (20 Sep 2014)
 
   20 Sep 2014; Martin Väth <martin@mvath.de>:
