@@ -2,9 +2,14 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*noscript-2.6.8.43 (30 Sep 2014)
+*noscript-2.6.9.2 (19 Oct 2014)
 
-  30 Sep 2014; Martin Väth <martin@mvath.de>:
+  19 Oct 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
+*noscript-2.6.9 (07 Oct 2014)
+
+  07 Oct 2014; Martin Väth <martin@mvath.de>:
   Version bump, remove old ebuild
 
 *noscript-2.6.8.42 (22 Sep 2014)
