@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Oct 2014; Martin Väth <martin@mvath.de>:
+  Update gettext deps
+
   12 Oct 2014; Martin Väth <martin@mvath.de>:
   Update gettext deps
 
